--- a/assets/css/sarah.css
+++ b/assets/css/sarah.css
@@ -13,11 +13,11 @@
   /* 
    * Optional: Makes the sample page fill the window. 
    */
-  html,
+  /* html,
   body {
     height: 100%;
     margin: 0;
     padding: 0;
-  }
+  } */
 
   /* END Sarah's CSS */
